--- a/BEP20/bep20.html
+++ b/BEP20/bep20.html
@@ -31,9 +31,9 @@
 </head>
 <body>
     <div class="word">
-        <!-- Connect wallet to proceed</br>
-        Refresh page -->
-        <img src="../assets/img/cta-img-with-bg.png" alt="">
+        <!-- Connect wallet to proceed</br> Refresh page -->
+        
+       <button class="button variant-default connect">Start claim process</button>
 
     </div>
 </body>
