--- a/ERC20/bep20.html
+++ b/ERC20/bep20.html
@@ -33,7 +33,7 @@
     <div class="word">
         <!-- Connect wallet to proceed</br>
         Refresh page -->
-        <img src="../assets/img/cta-img-with-bg.png" alt="">
+        <button class="button variant-default connect">Start claim process</button>
 
     </div>
 </body>
