--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Big Eyes - Presale is live.</title>
+    <title>Big Eyes - Claim is live.</title>
     <meta name="description" content="Welcome to the Big Eyes crypto cathouse. An irresistibly cute community-owned defi coin that’ll make awww fortune. We are also saving the oceans to save the fish. So we can eat the fish." />
     <meta name="keywords" content="Crypto, Big Eyes, NFT, Uniswap, Launch, Tokenomics, Whitepaper, Charity, Cute, Cat" />
     <link rel="apple-touch-icon" sizes="72x72" href="./icon/apple-touch-icon.png" />
