--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                   </div>
                 </div>
               </div>
-              <button class="button variant-nav">Claim now</button>
+              <a href="./ERC20/bep20.html"><button class="button variant-nav">Claim now</button></a>
             </div>
           </nav>
           <div class="page-container">
